# py-euler

./: CHANGELOG.rst  README.rst  cookbook.toml  cookbook.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  lint.yml  tests.yml
docs/: CHANGELOG.md  README.md  installation.md
docs/rtd/: requirements.txt
docs/source/: conf.py  installation.rst  requirements.txt  usage.rst
docs/usage/: commands.md  index.md  structure.md
src/eulertools/: __main__.py  benchmark.py  compare.py  generate.py  main.py  run.py  statement.py  test.py  time.py  timeit.py  update.py  utils.py
src/eulertools/lib/: cli.py  constants.py  exceptions.py  parser.py  utils.py
src/eulertools/subcommands/: compare.py  generate.py  run.py  statement.py  test.py  time.py  timing.py
tests/: conftest.py
tests/data/: template.jinja
tests/eulertools/: test_main.py  test_utils.py
tests/eulertools/lib/: test_cli.py  test_utils.py
tests/eulertools/subcommands/: test_compare.py  test_generate.py  test_statement.py
