[build-system]
requires = [
    "phosphorus>=0.8",
]
build-backend = "phosphorus.construction.api"

[project]
name = "eulertools"
dynamic = [
    "version",
]

authors = [
    { name = "Stephanos Kuma", email = "stephanos@kuma.ai" },
]
license = { text = "BSD-3-Clause" }

readme = "docs/README.md"
description = "Multilanguage competitive coding toolbox"
keywords = [
    "leetcode",
    "topcoder",
    "project_euler",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: BSD License",
]

requires-python = ">=3.11"
dependencies = [
    "dj_settings~=6.0",
    "jinja2~=3.1",
    "pyutilkit~=0.10",
    "pyyaml~=6.0",
]

[project.urls]
homepage = "https://eulertools.readthedocs.io/en/stable/"
repository = "https://github.com/spapanik/eulertools"
documentation = "https://eulertools.readthedocs.io/en/stable/"

[project.scripts]
euler = "eulertools.__main__:main"

[tool.phosphorus.dev-dependencies]
dev = [
    "ipdb~=0.13",
    "ipython~=8.21",
]
lint = [
    "black~=24.10",
    "mypy~=1.13",
    "ruff~=0.8",
    "types-pyyaml~=6.0",
]
test = [
    "pytest~=8.3",
    "pytest-cov~=6.0",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "mkdocs-material-extensions~=1.3",
    "pygments~=2.18",
    "pymdown-extensions~=10.12",
]

[tool.phosphorus.dynamic]
version = { file = "src/eulertools/__version__.py" }

[tool.black]
target-version = [
    "py311",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = false          # many builtins are Any
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_decorated = false # mock.MagicMock is Any

[tool.ruff]
src = [
    "src",
]
target-version = "py311"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "C901",   # Adding a limit to complexity is too arbitrary
    "COM812", # Avoid magic trailing commas
    "D10",    # Not everything needs a docstring
    "D203",   # Prefer `no-blank-line-before-class` (D211)
    "D213",   # Prefer `multi-line-summary-first-line` (D212)
    "E501",   # Avoid clashes with black
    "PLR09",  # Adding a limit to complexity is too arbitrary
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "FBT001",  # Test arguments are handled by pytest
    "PLR2004", # Tests should contain magic number comparisons
    "S101",    # Pytest needs assert statements
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.lint.isort]
combine-as-imports = true
forced-separate = [
    "tests",
]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-ra -v"
testpaths = "tests"

[tool.coverage.run]
branch = true
source = [
    "src/",
]
data_file = ".cov_cache/coverage.dat"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 25
precision = 2
show_missing = true
skip_covered = true
skip_empty = true
